generate new branch

--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ h3 a {
                   <td width="560" align="center" valign="top">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
                      <tr>
-                      <td align="left" class="es-p15t"><p><span style="font-size:10px;">Примечание: Цены и скидки предоставляются на товары, указанные в настоящей рассылке, и действительны на момент отправки данного письма. Настоящая рассылка не является офертой. Актуальная информация о цене и наличии товара представлена на сайте Ozon. Действие скидок не распространяется на товары по «специальной цене». С более подробной информацией о действии скидок Вы можете ознакомиться здесь.<br><br>Вы получили это письмо, потому что зарегистрированы на сайте Ozon. Данное письмо не требует ответа.</span></p></td>
+                      <td align="left" class="es-p15t"><p><span style="font-size:10px;">Примечание: Цены и скидки предоставляются на товары, указанные в настоящей рассылке, и действительны на момент отправки данного письма. Настоящая рассылка не является офертой. Актуальная информация о цене и наличии товара представлена <a href="#" style="color: #0060FF; text-decoration: none; font-size: 10px;">на сайте Ozon</a>. Действие скидок не распространяется на товары по «специальной цене». С более подробной информацией о действии скидок Вы можете ознакомиться<a href="#" style="color: #0060FF; text-decoration: none; font-size: 10px;">здесь</a>.<br><br>Вы получили это письмо, потому что зарегистрированы на сайте Ozon. Данное письмо не требует ответа.</span></p></td>
                      </tr>
                    </table></td>
                  </tr>
