--- a/letter-2.html
+++ b/letter-2.html
@@ -812,7 +812,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="99" class="es-m-p0r es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/20x20" alt
@@ -828,7 +829,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="96" class="es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/24x24" alt
@@ -844,7 +846,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" class="es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
@@ -860,7 +863,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" align="center" class="es-m-p20b">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
@@ -876,7 +880,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" align="left" class="es-m-p20b">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/16x22" alt
@@ -891,7 +896,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-right" align="right">
                         <tr>
                           <td width="95" align="left">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
@@ -1003,7 +1009,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="99" class="es-m-p0r es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/25x25" alt
@@ -1019,7 +1026,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="96" class="es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/24x24" alt
@@ -1035,7 +1043,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" class="es-m-p20b" align="center">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/17x27" alt
@@ -1051,7 +1060,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" align="center" class="es-m-p20b">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
@@ -1067,7 +1077,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-left" align="left">
                         <tr>
                           <td width="95" align="left" class="es-m-p20b">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
@@ -1082,7 +1093,8 @@
                       <table cellpadding="0" cellspacing="0" class="es-right" align="right">
                         <tr>
                           <td width="95" align="left">
-                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation">
+                            <table cellpadding="0" cellspacing="0" width="100%" role="presentation"
+                              style=" width: 22px; height: 22px;">
                               <tr>
                                 <td align="center">
                                   <amp-img class="adapt-img" src="https://via.placeholder.com/22x22" alt
